# incc_shared

./: pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
incc_shared/: constants.py  exceptions.py
incc_shared/admin/: storage.py
incc_shared/admin/service/: executor.py  organization.py  schedule.py
incc_shared/auth/: constants.py  context.py  decorators.py
incc_shared/exceptions/: errors.py  http.py
incc_shared/handler/: decorators.py
incc_shared/models/: __init__.py  base.py  common.py  email_index_user.py  feature.py  helper.py  organization.py  user.py
incc_shared/models/db/: customer.py
incc_shared/models/db/boleto/: __init__.py  base.py  boleto.py
incc_shared/models/db/customer/: __init__.py  base.py  customer.py
incc_shared/models/db/indexes/: __init__.py  email_index.py  schedule.py  user_index.py  user_index_user.py
incc_shared/models/db/lock/: __init__.py
incc_shared/models/db/organization/: __init__.py  base.py  organization.py
incc_shared/models/request/: __init__.py
incc_shared/service/: __init__.py  boleto.py  calculator.py  customer.py  executor.py  org.py  organization.py  schedule.py  user.py  utils.py
incc_shared/service/storage/: base.py  dynamodb.py
incc_shared/storage/: __init__.py  customer.py  org.py  user.py
incc_shared/utils/: http.py
tests/: conftest.py  history.json
tests/unit/: test_boleto_service.py  test_calculator_service.py  test_customer_service.py  test_executor_service.py  test_org_service.py  test_organization_service.py  test_schedule_service.py  test_user_service.py
(+19 files in other folders)
