[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incc_shared"
version = "0.1.0"
description = "Shared code for incc-app"
requires-python = ">=3.8"
dependencies = [
    "pydantic[email]",
    "cognitojwt[sync]",
    "python-ulid",
    # "cefapi @ git+ssh://git@github.com/lucasjrt/cefapi@main" # TODO: Add this later
]

[tool.setuptools.packages.find]
include = ["*"]

[tool.pytest_env]
DYNAMODB_TABLE = "incc-shared-test"
AWS_ACCESS_KEY_ID = "testing"
AWS_SECRET_ACCESS_KEY = "testing"
AWS_SESSION_TOKEN = "testing"
AWS_DEFAULT_REGION = "sa-east-1"
